PLT-6807 Ensured select teams page can scroll on iOS (#6630)

--- a/webapp/sass/base/_structure.scss
+++ b/webapp/sass/base/_structure.scss
@@ -52,6 +52,7 @@ body {
     @include legacy-pie-clearfix;
     height: 100%;
     position: relative;
+    -webkit-overflow-scrolling: touch;
 }
 
 .channel-view {
